--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class="app__infos">
 		<h1 class="app__name">Observatory</h1>
 		<p class="app__description">Observatory is the essential app for tracking PC game prices and discounts exclusively from legitimate resellers. Easily monitor the best deals for your favorite PC games, ensuring you never miss out on a sale.</p>
-		<div class="app__buttons app__buttons--desktop">
+		<!-- <div class="app__buttons app__buttons--desktop">
 			<a href="https://play.google.com/store" class="app__button-play" target="_blank" title="Get on Google Play">
 				<img src="assets/google-play-badge.png" alt="Get on Google Play">
 			</a>
@@ -33,7 +33,7 @@
 			<a href="https://github.com/" class="app__button-web" target="_blank" title="Go to website">
 				<img src="assets/pwa-badge.png" alt="Go to website">
 			</a>
-		</div>
+		</div> -->
 	</div>
 </header>
 <div class="app__buttons app__buttons--mobile container">
