--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 								<a href="terms-and-conditions.html">Terms &amp; Conditions</a>
 							</li>
 							<li class="footer__link">
-								<a href="https://n4no.com/" targe="_blank">GitHub</a>
+								<a href="https://github.com/benjamindean/observatory" targe="_blank">GitHub</a>
 							</li>
 					</ul>
 				</div>
