--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html dir="auto" lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-G6SR28CYD0"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-G6SR28CYD0");
+    </script>
     <meta charset="UTF-8" />
     <title>Terms &amp; Conditions - Observatory</title>
 
