--- a/index.html
+++ b/index.html
@@ -57,17 +57,35 @@
             best deals for your favorite PC games, ensuring you never miss out
             on a sale.
           </p>
-          <!-- <div class="app__buttons app__buttons--desktop">
-			<a href="https://play.google.com/store" class="app__button-play" target="_blank" title="Get on Google Play">
-				<img src="assets/google-play-badge.png" alt="Get on Google Play">
-			</a>
-			<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank" title="Get on Appstore">
-				<img src="assets/ios-badge.svg" alt="Get on Appstore">
-			</a>
-			<a href="https://github.com/" class="app__button-web" target="_blank" title="Go to website">
-				<img src="assets/pwa-badge.png" alt="Go to website">
-			</a>
-		</div> -->
+          <div class="app__buttons app__buttons--desktop">
+            <!-- <a
+              href="https://play.google.com/store"
+              class="app__button-play"
+              target="_blank"
+              title="Get on Google Play"
+            >
+              <img
+                src="assets/google-play-badge.png"
+                alt="Get on Google Play"
+              />
+            </a> -->
+            <a
+              href="https://apps.apple.com/app/observatory-for-itad/id6479194330"
+              class="app__button-ios"
+              target="_blank"
+              title="Get on Appstore"
+            >
+              <img src="assets/ios-badge.svg" alt="Get on Appstore" />
+            </a>
+            <!-- <a
+              href="https://github.com/"
+              class="app__button-web"
+              target="_blank"
+              title="Go to website"
+            >
+              <img src="assets/pwa-badge.png" alt="Go to website" />
+            </a> -->
+          </div>
         </div>
       </header>
       <!-- <div class="app__buttons app__buttons--mobile container">
