--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             best deals for your favorite PC games, ensuring you never miss out
             on a sale.
           </p>
-          <div class="app__buttons app__buttons--desktop">
+          <div class="app__buttons">
             <!-- <a
               href="https://play.google.com/store"
               class="app__button-play"
@@ -88,18 +88,6 @@
           </div>
         </div>
       </header>
-      <!-- <div class="app__buttons app__buttons--mobile container">
-			<a href="https://play.google.com/store" class="app__button-play" target="_blank" title="Get on Google Play">
-				<img src="assets/google-play-badge.png" alt="Get on Google Play">
-			</a>
-			<a href="https://www.apple.com/ios/app-store/" class="app__button-ios" target="_blank"
-				title="Get on Appstore">
-				<img src="assets/ios-badge.svg" alt="Get on Appstore">
-			</a>
-			<a href="https://github.com/" class="app__button-web" target="_blank" title="Go to website">
-				<img src="assets/pwa-badge.png" alt="Go to website">
-			</a>
-		</div> -->
       <section class="app__screenshots app__section">
         <div class="container">
           <h2 class="app__section-title">Screenshots</h2>
@@ -189,10 +177,10 @@
           </p>
           <ul class="footer__links">
             <li class="footer__link">
-              <a href="privacy-policy">Privacy Policy</a>
+              <a href="privacy-policy.html">Privacy Policy</a>
             </li>
             <li class="footer__link">
-              <a href="terms-and-conditions">Terms &amp; Conditions</a>
+              <a href="terms-and-conditions.html">Terms &amp; Conditions</a>
             </li>
             <li class="footer__link">
               <a
