--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -41,6 +41,9 @@
   <body>
     <main>
       <article class="page">
+        <a href="index.html" class="page__back">
+          <h4>< Back</h4>
+        </a>
         <header class="page__header">
           <h1 class="page__title">Privacy Policy</h1>
         </header>
@@ -166,7 +169,11 @@
               <a href="terms-and-conditions.html">Terms &amp; Conditions</a>
             </li>
             <li class="footer__link">
-              <a href="https://n4no.com/" targe="_blank">GitHub</a>
+              <a
+                href="https://github.com/benjamindean/observatory"
+                targe="_blank"
+                >GitHub</a
+              >
             </li>
           </ul>
         </div>
