--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -38,9 +38,13 @@
     <link rel="stylesheet" href="assets/tobi.css" />
     <link rel="stylesheet" href="assets/style.css" />
   </head>
+
   <body>
     <main>
       <article class="page">
+        <a href="index.html" class="page__back">
+          <h4>< Back</h4>
+        </a>
         <header class="page__header">
           <h1 class="page__title">Terms & Conditions</h1>
         </header>
@@ -191,7 +195,11 @@
               <a href="terms-and-conditions.html">Terms &amp; Conditions</a>
             </li>
             <li class="footer__link">
-              <a href="https://n4no.com/" targe="_blank">GitHub</a>
+              <a
+                href="https://github.com/benjamindean/observatory"
+                targe="_blank"
+                >GitHub</a
+              >
             </li>
           </ul>
         </div>
