--- a/index.html
+++ b/index.html
@@ -94,30 +94,30 @@
         </div>
         <div class="app__screenshots-wrapper container-desktop">
           <div class="app__screenshots-list">
-            <a href="content/image/lev5g7l2w4u35jwrzkyw.png" class="lightbox">
+            <a href="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_deals_page.png" class="lightbox">
               <img
-                src="content/image/lev5g7l2w4u35jwrzkyw.png"
+                src="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_deals_page.png"
                 class="app__screenshot"
                 alt=""
               />
             </a>
-            <a href="content/image/lzifve6ukyvsc32is75l.png" class="lightbox">
+            <a href="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_deal_page.png" class="lightbox">
               <img
-                src="content/image/lzifve6ukyvsc32is75l.png"
+                src="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_deal_page.png"
                 class="app__screenshot"
                 alt=""
               />
             </a>
-            <a href="content/image/apkueaa4exz1lc26fpcr.png" class="lightbox">
+            <a href="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_waitlist_page.png" class="lightbox">
               <img
-                src="content/image/apkueaa4exz1lc26fpcr.png"
+                src="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_waitlist_page.png"
                 class="app__screenshot"
                 alt=""
               />
             </a>
-            <a href="content/image/t8i0m2po7pbvwz4r1pfn.png" class="lightbox">
+            <a href="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_search_page.png" class="lightbox">
               <img
-                src="content/image/t8i0m2po7pbvwz4r1pfn.png"
+                src="https://raw.githubusercontent.com/benjamindean/observatory/main/screenshots/ios/iPhone%2014%20Pro%20Max_search_page.png"
                 class="app__screenshot"
                 alt=""
               />
